codepkg/objects/Distribution_Plan_Version__c.object
<CustomObject>
    <fields>
        <fullName>Old_Version_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Version Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Distribution Plan Versions</relationshipLabel>
        <relationshipName>Distribution_Plan_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Version_Data_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Data 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version_Data_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Data 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version_Data_4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Data 4</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Distribution Plan Version</label>
    <nameField>
        <displayFormat>DPV-{00000000}</displayFormat>
        <label>Distribution Plan Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Plan Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>